--- a/src/style.css
+++ b/src/style.css
@@ -22,7 +22,6 @@ body {
 }
 
 .error {
-    display: none;
     font-size: 25px;
     font-weight: 600;
     color: brown;
@@ -113,7 +112,7 @@ body {
     display: block;
 }
 
-.is-hidden {
+.is-hidden, .loader.is-hidden {
   position: absolute;
   width: 1px;
   height: 1px;
